--- a/ipc/src/main/res/values/strings.xml
+++ b/ipc/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IPC</string>
+    <string name="title_activity_messenger">MessengerActivity</string>
 </resources>
